--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <tr>
             <td><button>(</button></td>
             <td><button>)</button></td>
-            <td><button>«</button></td>
+            <td><button><</button></td>
             <td><button>C</button></td>
         </tr>
         <tr>
