--- a/index.html
+++ b/index.html
@@ -1,48 +1,156 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="calculator.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Calculator</title>
+<style>
+body {
+    font-family: 'Roboto', sans-serif; /* Material uses Roboto */
+    background-color: #121212; /* Material dark mode background */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    color: #E0E0E0; /* Material light text for visibility */
+}
+
+#calculator {
+    width: auto;
+    background-color: #1E1E1E; /* Material card-like element background */
+    padding: 24px;
+    border-radius: 12px; /* Material guidelines for corner rounding */
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.24), 
+                0 2px 6px rgba(0, 0, 0, 0.12); /* Material elevation shadow */
+}
+
+#result {
+    width: 100%;
+    height: 56px; /* Increased size for touch targets */
+    font-size: 24px;
+    padding: 16px;
+    margin-bottom: 24px;
+    border: 1px solid #292929; /* Subtle border for emphasis */
+    border-radius: 8px; /* Material rounding */
+    background-color: #222222; /* Material input field color */
+    color: #BDBDBD; /* Material hint text color for inputs */
+    box-sizing: border-box;
+}
+
+#buttons-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 8px; /* Adjusted spacing in line with Material guidelines */
+}
+
+button {
+    background-color: #2D2D2D; /* Material darker button background */
+    color: #FFFFFF; /* Material button text color */
+    border: none;
+    padding: 16px; /* Material touch target size */
+    border-radius: 8px; /* Material rounding */
+    font-size: 20px;
+    cursor: pointer;
+    transition: background-color 0.3s, box-shadow 0.2s;
+}
+
+button:hover {
+    background-color: #373737; /* Material hover state */
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 
+                0 3px 6px rgba(0, 0, 0, 0.23); /* Raised elevation on hover */
+}
+
+button.equals {
+grid-column-start: 1;
+grid-column-end: 5;
+}
+
+button:active {
+    background-color: #424242; /* Material click feedback */
+}
+
+/* Focus styles can be added to enhance accessibility */
+button:focus {
+    outline: none;
+    box-shadow: 0 0 0 4px rgba(255, 255, 255, 0.3); /* Light outline for focus */
+}
+
+/* Additional CSS for any other states can be added if necessary */
+</style>
 </head>
 <body>
+
 <div id="calculator">
-    <div id="result" class="screen">0</div>
-    <table class="buttons">
-        <tr>
-            <td><button>(</button></td>
-            <td><button>)</button></td>
-            <td><button><</button></td>
-            <td><button>C</button></td>
-        </tr>
-        <tr>
-            <td><button>7</button></td>
-            <td><button>8</button></td>
-            <td><button>9</button></td>
-            <td><button>/</button></td>
-        </tr>
-        <tr>
-            <td><button>4</button></td>
-            <td><button>5</button></td>
-            <td><button>6</button></td>
-            <td><button>*</button></td>
-        </tr>
-        <tr>
-            <td><button>1</button></td>
-            <td><button>2</button></td>
-            <td><button>3</button></td>
-            <td><button>-</button></td>
-        </tr>
-        <tr>
-            <td><button>0</button></td>
-            <td><button>.</button></td>
-            <td><button>^</button></td>
-            <td><button>+</button></td>
-        </tr>
-        <tr>
-            <td colspan="4"><button>=</button></td>
-        </tr>
-    </table>
-</div>
-    <script src="calculator.js"></script>
+    <!-- Result display -->
+    <input type="text" id="result" readonly>
+
+    <!-- Buttons container -->
+    <div id="buttons-container">
+        <!-- First row -->
+        <button class="clear" onclick="clearDisplay()">C</button>
+        <button onclick="backspace()">⌫</button>
+        <button class="operator" onclick="appendToDisplay('**')">^</button>
+        <button class="operator" onclick="appendToDisplay('/')">÷</button>
+
+        <!-- Second row -->
+        <button onclick="appendToDisplay('7')">7</button>
+        <button onclick="appendToDisplay('8')">8</button>
+        <button onclick="appendToDisplay('9')">9</button>
+        <button class="operator" onclick="appendToDisplay('*')">×</button>
+        
+        <!-- Third row -->
+        <button onclick="appendToDisplay('4')">4</button>
+        <button onclick="appendToDisplay('5')">5</button>
+        <button onclick="appendToDisplay('6')">6</button>
+        <button class="operator" onclick="appendToDisplay('-')">−</button>
+
+        <!-- Fourth row -->
+        <button onclick="appendToDisplay('1')">1</button>
+        <button onclick="appendToDisplay('2')">2</button>
+        <button onclick="appendToDisplay('3')">3</button>
+        <button class="operator" onclick="appendToDisplay('+')">+</button>
+
+        <!-- Fifth row -->
+        <button onclick="appendToDisplay('0')">0</button>
+        <button onclick="appendToDisplay('.')">.</button>
+        <button class="operator" onclick="appendToDisplay('(')">(</button>
+        <button class="operator" onclick="appendToDisplay(')')">)</button>
+
+        <!-- Sixth row -->
+        <button class="equals" onclick="calculateResult()" style="width: 100%;">=</button>
+    </div> <!-- End of buttons container -->
+</div> <!-- End of calculator -->
+
+<script>
+function appendToDisplay(value) {
+    document.getElementById('result').value += value;
+}
+
+function clearDisplay() {
+    document.getElementById('result').value = '';
+}
+
+function backspace() {
+    const display = document.getElementById('result');
+    display.value = display.value.substring(0, display.value.length - 1);
+}
+
+function calculateResult() {
+    const display = document.getElementById('result');
+    try {
+        // Evaluate the equation in the display
+        display.value = new Function('return ' + display.value)();
+    } catch (e) {
+        if (e instanceof SyntaxError) {
+            alert('Invalid equation');
+            clearDisplay();
+        } else {
+            throw e; // rethrow the error if it's not a SyntaxError
+        }
+    }
+}
+</script>
+
 </body>
 </html>
