--- a/index.html
+++ b/index.html
@@ -152,6 +152,12 @@ function calculateResult() {
     }
 }
 </script>
-
+<script>
+    if (navigator.serviceWorker) {
+      window.addEventListener('load', function() {
+        navigator.serviceWorker.register('sw.js');
+      });
+    }
+</script>
 </body>
 </html>
