--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Calculator</title>
 <style>
+html, body {
+  height: 100%;
+  margin: 0;
+}
+    
 body {
     font-family: 'Roboto', sans-serif; /* Material uses Roboto */
     background-color: #121212; /* Material dark mode background */
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    margin: 0;
     color: #E0E0E0; /* Material light text for visibility */
 }
 
